--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,11 +1,16 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 3,
-  "summary": "Build a health-focused app where users enter age, weight, health conditions/sicknesses, and blood pressure, then tap a “Search Foods” button to receive food recommendations tailored to those inputs.",
-  "architectural_notes": [],
-  "known_issues": [],
-  "isFixRequest": false,
-  "imageRequirements": "## Required Images\n- Friendly flat illustration of assorted healthy foods (healthy-foods-hero.dim_1400x600.png)\n- Simple line icon of a heart with a fork (health-app-icon.dim_256x256.png)",
+  "projectStateVersion": 9,
+  "summary": "Build a mobile health-focused app where users enter age, weight, blood pressure, health conditions (from an expanded selectable list), and allergies (including a “No allergies” option), then tap a “Search Foods” button to receive 1–5 allergen-safe food recommendations that include photos, health explanations, ingredients, cooking steps, nutrition summaries, and a medical disclaimer.",
+  "architectural_notes": [
+    "Need a strategy for dish photos in results (e.g., generated/static assets vs external image URLs) consistent with 'do not serve images from backend' constraint.",
+    "Backend currently has an empty in-memory recipe database; add a seed dataset (and consider a scalable storage approach later) so recommendations can be returned.",
+    "Decide on and maintain a canonical, expanded health-conditions list for the frontend (and how it maps to backend keywords used in recommendation logic)."
+  ],
+  "known_issues": [
+    "Results page shows no food options because the backend recipe/food dataset is empty (no recipes are being added to the database)."
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
       "id": "feature-build-a-frontend-flow-with-a-health-input-form-age-weight-sicknesses-health-conditions-systolic-and-diastolic-blood-pressure-and-a-primary-button-labeled-exactly-search-foods-that-triggers-fetching-recommendations-and-then-displays-the-results",
@@ -38,6 +43,46 @@
         "REQ-6"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-add-an-allergies-input-to-the-health-input-form-that-supports-selecting-multiple-common-allergies-e-g-nuts-dairy-gluten-shellfish-eggs-soy-and-also-allows-users-to-type-and-add-custom-allergies-as-tags",
+      "title": "Add an Allergies input to the health input form that supports selecting multiple common allergies (e.g., nuts, dairy, gluten, shellfish, eggs, soy) and also allows users to type and add custom allergies as tags.",
+      "reqIds": [
+        "REQ-7"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-expand-the-recommendation-data-model-end-to-end-so-each-recommended-food-includes-a-dish-photo-reference-a-short-health-explanation-a-full-ingredient-list-step-by-step-cooking-instructions-and-a-nutrition-summary-e-g-calories-sodium-protein-and-render-all-of-these-details-in-the-results-view",
+      "title": "Expand the recommendation data model end-to-end so each recommended food includes: a dish photo reference, a short health explanation, a full ingredient list, step-by-step cooking instructions, and a nutrition summary (e.g., calories, sodium, protein), and render all of these details in the results view.",
+      "reqIds": [
+        "REQ-9"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-and-use-static-dish-photos-for-the-recommended-foods-as-frontend-static-assets-and-ensure-the-results-ui-loads-them-from-the-frontend-public-assets-path-with-a-graceful-fallback-if-an-image-is-missing",
+      "title": "Add and use static dish photos for the recommended foods as frontend static assets, and ensure the results UI loads them from the frontend public assets path with a graceful fallback if an image is missing.",
+      "reqIds": [
+        "REQ-10"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-a-user-facing-no-allergies-option-in-the-allergies-section-that-lets-users-explicitly-indicate-they-have-no-allergies-clears-any-selected-typed-allergies-and-sends-an-empty-allergies-list-to-the-backend-recommendation-query",
+      "title": "Add a user-facing “No allergies” option in the Allergies section that lets users explicitly indicate they have no allergies, clears any selected/typed allergies, and sends an empty allergies list to the backend recommendation query.",
+      "reqIds": [
+        "REQ-14"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-expand-the-health-conditions-input-to-support-selecting-from-a-broad-built-in-list-of-common-health-conditions-while-still-allowing-custom-conditions-to-be-added-so-users-do-not-need-to-type-most-conditions-manually",
+      "title": "Expand the Health Conditions input to support selecting from a broad, built-in list of common health conditions (while still allowing custom conditions to be added), so users do not need to type most conditions manually.",
+      "reqIds": [
+        "REQ-15"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -66,6 +111,88 @@
       "summary": "Implement backend recommendation logic that uses sickness/condition keywords and blood pressure categories (e.g., low/normal/elevated/high) to select foods and provide brief explanations per food item.",
       "reqIds": [
         "REQ-2"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Add allergy input (multi-select and/or free text) to the health form",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-6",
+      "summary": "Update recommendation filtering to exclude foods containing any user-listed allergens",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-7",
+      "summary": "Expand results to return/display 1–5 recommendations (not just a single option)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-8",
+      "summary": "For each recommended food, display a dish photo, full ingredient list, step-by-step cooking instructions, and a nutrition summary (e.g., calories, sodium, protein)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-10",
+      "summary": "Extend the backend food recommendation API to accept a list of user allergies, exclude recommendations whose ingredient lists contain any of the provided allergens, and return 1–5 recommendations maximum.",
+      "reqIds": [
+        "REQ-8"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-9",
+      "summary": "Seed the backend with an initial set of real food/recipe options (target ~30–40) so the app returns recommendations instead of an empty results page",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-11",
+      "summary": "Populate the backend in-memory `recipeDatabase` with a large built-in seed set of dishes so the app returns recommendations immediately after deployment (no manual `addRecipe` calls required). Target seeding at least 30 dishes (and add more if feasible within code-size limits), each including: `name`, `photoReference`, `healthExplanation`, `ingredients`, `instructions`, and `nutritionSummary` (calories, sodium, protein, carbohydrates, fats).",
+      "reqIds": [
+        "REQ-11"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-12",
+      "summary": "Ensure seeded dishes use valid `photoReference` values compatible with the existing frontend `DishImage` behavior: either reference existing generated assets (e.g., `quinoa-bowl.dim_768x512.png`, `berries-parfait.dim_768x512.png`, `salmon-plate.dim_768x512.png`, `oatmeal-bowl.dim_768x512.png`, `leafy-greens-salad.dim_768x512.png`) or leave `photoReference` empty to intentionally trigger the frontend fallback (“Image not available”).",
+      "reqIds": [
+        "REQ-12"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-13",
+      "summary": "Add a “No allergies” option to the allergies input so users can explicitly indicate they have no allergies and skip allergen filtering",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-14",
+      "summary": "Expand the selectable list of health conditions to include a broad set of common conditions (so users don’t need to type most conditions manually)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-15",
+      "summary": "Ensure the backend returns non-empty food recommendations by seeding the in-canister recipe database with a built-in set of real dishes available immediately after deployment (no manual addRecipe calls required).",
+      "reqIds": [
+        "REQ-13"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-18",
+      "summary": "Make allergy filtering in getFoodRecommendations robust to common user input variations by applying case-insensitive matching between user allergies and dish ingredients, and ensure that an empty allergies list disables allergen filtering.",
+      "reqIds": [
+        "REQ-16"
       ],
       "status": "pending"
     }
