--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,6 +1,6 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 13,
+  "projectStateVersion": 15,
   "summary": "Build a mobile health-focused app where users enter age, weight, blood pressure, health conditions (from an expanded selectable list), and allergies (including a “No allergies” option), then tap a “Search Foods” button to receive 1–5 allergen-safe food recommendations that include photos, health explanations, ingredients, cooking steps, nutrition summaries, and a medical disclaimer.",
   "architectural_notes": [
     "Need a strategy for dish photos in results (e.g., generated/static assets vs external image URLs) consistent with 'do not serve images from backend' constraint.",
@@ -10,10 +10,12 @@
   ],
   "known_issues": [
     "Results page shows no food options because the backend recipe/food dataset is empty (no recipes are being added to the database).",
-    "Food photos are not displaying in the results UI (dish photo/image reference not rendering as expected)."
+    "Food photos are not displaying in the results UI (dish photo/image reference not rendering as expected).",
+    "Tiger-themed decorative elements are not appearing in the UI as expected.",
+    "Soundtrack/play button does not produce audio (background music not playing) even when the user presses play."
   ],
-  "isFixRequest": false,
-  "imageRequirements": "## Edit Images\n- Create small tiger decal illustrations in a cohesive style (tiger-decal-left.dim_256x256.png)\n- Create small tiger decal illustrations in a cohesive style (tiger-decal-right.dim_256x256.png)\n- Create a small tiger icon that can be used as a subtle accent (tiger-icon.dim_128x128.png)",
+  "isFixRequest": true,
+  "imageRequirements": "## Required Images\n- Tiger decal illustration, left corner variant (tiger-decal-left.dim_256x256.png)\n- Tiger decal illustration, right corner variant (tiger-decal-right.dim_256x256.png)\n- Small tiger icon illustration (tiger-icon.dim_128x128.png)",
   "existing_features": [
     {
       "id": "feature-build-a-frontend-flow-with-a-health-input-form-age-weight-sicknesses-health-conditions-systolic-and-diastolic-blood-pressure-and-a-primary-button-labeled-exactly-search-foods-that-triggers-fetching-recommendations-and-then-displays-the-results",
@@ -124,6 +126,30 @@
       "title": "Add an optional soundtrack/background music feature that users can control (play/pause and volume or mute), with the soundtrack off by default and the user’s choice persisted locally so it stays consistent on refresh.",
       "reqIds": [
         "REQ-21"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-ensure-the-tiger-decal-decorations-referenced-by-the-hero-section-render-reliably-in-the-ui-specifically-the-two-hero-section-images-in-frontend-src-app-tsx-must-load-from-assets-generated-tiger-decal-left-dim-256x256-png-and-assets-generated-tiger-decal-right-dim-256x256-png-and-be-visibly-present-on-the-initial-non-results-screen",
+      "title": "Ensure the tiger decal decorations referenced by the hero section render reliably in the UI. Specifically, the two hero-section images in `frontend/src/App.tsx` must load from `/assets/generated/tiger-decal-left.dim_256x256.png` and `/assets/generated/tiger-decal-right.dim_256x256.png` and be visibly present on the initial (non-results) screen.",
+      "reqIds": [
+        "REQ-22"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-verify-the-required-static-tiger-decal-image-assets-exist-in-the-frontend-public-assets-path-so-the-hero-section-can-load-them-place-them-under-frontend-public-assets-generated-using-the-exact-filenames-already-referenced-by-the-app",
+      "title": "Add/verify the required static tiger decal image assets exist in the frontend public assets path so the hero section can load them. Place them under `frontend/public/assets/generated/` using the exact filenames already referenced by the app.",
+      "reqIds": [
+        "REQ-23"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-fix-the-soundtrack-play-behavior-so-that-pressing-the-play-control-produces-audible-audio-when-not-muted-and-does-not-fail-silently-the-soundtrack-must-be-loaded-from-the-existing-path-referenced-in-frontend-src-components-soundtrackcontrols-tsx-assets-audio-barrera-healthy-eats-theme-mp3",
+      "title": "Fix the soundtrack play behavior so that pressing the Play control produces audible audio (when not muted) and does not fail silently. The soundtrack must be loaded from the existing path referenced in `frontend/src/components/SoundtrackControls.tsx`: `/assets/audio/barrera-healthy-eats-theme.mp3`.",
+      "reqIds": [
+        "REQ-24"
       ],
       "version": 1
     }
@@ -261,6 +287,14 @@
       "id": "AR-22",
       "summary": "Add an optional soundtrack/background music feature for the app/website (with user controls)",
       "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-26",
+      "summary": "Ensure the soundtrack audio asset exists in the frontend public assets path at the exact URL used by the app: `/assets/audio/barrera-healthy-eats-theme.mp3`.",
+      "reqIds": [
+        "REQ-25"
+      ],
       "status": "pending"
     }
   ],
